Fix: navbar dropdowns flickering when switching from desktop to mobile; Feat: mobile navbar dropdowns open on first press, navigate on second

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1187,7 +1187,7 @@ hr.content {
     padding-right: 1em;
 }
 
-.dropdown-toggle:not(.mobile):after{
+.dropdown-toggle:after{
     content: '\f078';
     font-family: FontAwesome;
     font-size:16px;
